src/objects/Constituency__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <description>Constituency Area</description>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire and Humberside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PwD__c</fullName>
        <label>No. People with Dementia</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Constituency Region</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Westminster Constituency - England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westminster Constituency - Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westminster NEW Constituency - Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westminster Constituency - Wales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Society_Area__c</fullName>
        <label>Society Area</label>
        <picklist>
            <picklistValues>
                <fullName>Central West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Anglia &amp; Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North &amp; East NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South &amp; West NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire &amp; Humber</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Society_Reigon__c</fullName>
        <label>Society Reigon</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Constituency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>PwD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Constituency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constituencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>